# tree-sitter-quarto

./: Cargo.toml  Makefile  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.qmd
.github/workflows/: publish.yml
bindings/c/: tree-sitter-quarto.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_quarto/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
scripts/: build.js
src/: grammar.json  parser.c  scanner.c
